fix column overflow issue w/ field names/types

--- a/src/gwt/src/org/rstudio/studio/client/workbench/views/connections/ui/TableBrowser.css
+++ b/src/gwt/src/org/rstudio/studio/client/workbench/views/connections/ui/TableBrowser.css
@@ -53,9 +53,11 @@
 
 .fieldName {
   float: left;
-  width: 130px;
-  margin-right: 15px;
-  text-overflow: ellipsis;
+  margin-right: 10px;
+}
+
+.fieldType {
+  color: #808080;
 }
 
 @sprite .tableViewDataset {
